change output folders for storing results"

--- a/LLM_experiments/tests_on_gemini.ipynb
+++ b/LLM_experiments/tests_on_gemini.ipynb
@@ -108,7 +108,7 @@
     "print(\"Prompt execution finished\")\n",
     "\n",
     "\n",
-    "file_path = f\"test_conversation_version_{testing_version}.md\"\n",
+    "file_path = f\"./test_results/test_conversation_version_{testing_version}.md\"\n",
     "with open(file_path, \"w\", encoding=\"utf-8\") as f:\n",
     "    f.write(\"\\n\".join(markdown_output))\n",
     "print(\"Result saved to file\")"
