first test with java;

--- a/LLM_experiments/tests_on_gemini.ipynb
+++ b/LLM_experiments/tests_on_gemini.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,17 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "gemini = ChatGoogleGenerativeAI(model=\"gemini-2.5-pro-preview-06-05\",temperature=0.2)\n",
-    "testing_version = \"GoalInstructionOutput\""
+    "testing_version = \"GoalInstructionOutputJava\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
       "Prompts loaded\n",
       "Executing prompts and collecting responses\n",
       "Executing prompt Goal: Setting up the role LLM should take for this conversation. \n",
-      "Instruction:  I need to implement a new project from the beginning to end and I will need your help. Through this session, you should act as a senior python developer. I will divide my inputs into descriptions of the task, and requests for code generation. You should always carefully analyze the requirements and constrains. \n",
+      "Instruction:  I need to implement a new project from the beginning to end and I will need your help. Through this session, you should act as a senior java developer. I will divide my inputs into descriptions of the task, and requests for code generation. You should always carefully analyze the requirements and constrains. \n",
       "Expected Output: Confirmation of specified role. Apply it to every further part of the conversation.\n",
       "\n",
       "Executing prompt Goal: Setting up a background for further conversation. \n",
@@ -99,11 +99,11 @@
       "Output expectation: Summary of provided description and prepare a short outline of the most important aspects of the project.  \n",
       "\n",
       "Executing prompt Goal: Setting up technical requirements for all code solutions generated through the conversation. \n",
-      "Instruction: I need this program to be written in python 3.11, but you can choose necessary libraries freely. I will be using pyenv to create the environment and pip to install packages. If anything is saved to the file system or read from it, you should start all the paths from current directory and eventually use subfolders. I need my code to follow PEP formatting standards. When providing me a code samples or scritps, always include name of the file in which the code should be put. This needs to be a production ready project, so I need to have clean and efficient code.\n",
+      "Instruction: I need this program to be written in Java 21, but you can choose necessary libraries freely. I will be using Maven 3.9 to build a project. If anything is saved to the file system or read from it, you should start all the paths from current directory and eventually use subfolders. I need my code to follow PEP formatting standards. When providing me a code samples or scritps, always include name of the file in which the code should be put. This needs to be a production ready project, so I need to have clean and efficient code.\n",
       "Expected Output: Confirmation of specified requirement. Apply it to every code generated in further parts of conversation, but do not generate any code for this answer.\n",
       "\n",
       "Executing prompt Goal: Understanding the first task of the project and requirements regarding its completion. \n",
-      "Instruction: The first task is a calculation of Needleman-Wunsch algorithm. As you probably know, it is an algorithm often used to align protein or nucleotide sequences. We will be using it for a similar purpose, aligning DNA sequences consisting of building blocks known as amino acids, which, when decoded and strung together in sequence, form proteins.\n",
+      "Instruction: The first task is a calculation of Needleman-Wunsch algorithm. As you probably know, it is an algorithm often used to align protein or nucleotide sequences. We will be using it for a similar purpose, aligning DNA sequences.\n",
       "We have two input files. The first one is named \"organisms.json\" and it has a key-value structure with name of the species as a key, and its DNA string as a value, both key and value are of type string. Example structure of the \"organism.json\" file: ``` {\"Wild boar\": \"MTHQTHAYHMVNPSPWPLTGALSALLMTSGL\", \"Horse\": \"MTHQTHAYHMVNPSPWPLTGALSALLMT\"} ``` .\n",
       "The second one is called “blosumXX.json”, where \"XX\" will be either 50 or 62 representing blosum50 and blosum62 matrices, respectively. This will be used as a dictionary of switching scores for Needleman-Wunsch algorithm. This file also represents a key-value structure based on BLOSUM table, which represents the substitution matrix used for sequence alignment. In the file, key is of type string and value is numerical. Exemplary file structure looks like: ```{“a”: -1, “b”: -2, “ab”: -3, “ba\": -3, “aa”: 2, “bb”: 3} ```. A single character key represents the cost of deleting that character, while a key of two concatenated characters represents the cost of substituting one character for the other. Example above says that: deleting 'a' cost -1; deleting 'b' cost -2; swapping 'a' for 'b' or 'b' for 'a' cost -3; matching 'a' to 'a' scores +2; matching 'b' to 'b' scores +3.\n",
       "In my project I will need to calculate the Needleman-Wunsch score of aligning two DNA sequences, for many pair of species. Also, I will be using two different types of BLOSUM tables: BLOSUM50 and BLOSUM62. Created code can assume, that during one run only one type of blosum matrix will be used, but should be prepare to change the type of used matrix between different runs.\n",
@@ -137,8 +137,8 @@
       "\n",
       "Executing prompt Goal: Generating a code for saving a tree to Newick format, as a intermediate step in solution for the second task in the project.\n",
       "Instruction:  I need a code that saves tree representation to two different versions of Newick format: \n",
-      "first one that saves only nodes' names, for example: \"(A,B,(C,D)E)F;\" - this should be saved to a \"tree_blosumXX_newick.nw\", where XX represents version of blosum table that was used throught previous tasks; \n",
-      "second one should save both nodes' names and distances in the tree, for example: \"(A:1,B:2,(C:3,D:4)E:5)F;\" - this should be saved to a \"tree_blosumXX_newick_with_distance.nw\", where XX represents version of blosum table that was used throught previous tasks. In this case, the distances shouldn't include any decimal point number, so remember to write them as a integers (e.g. 1200 instead of 1200.00).\n",
+      "first one that saves only leaf nodes' names, for example: \"(A,B,(C,D));\" - this should be saved to a \"tree_blosumXX_newick.nw\", where XX represents version of blosum table that was used throught previous tasks; \n",
+      "second one should save both leaf nodes' names and distances between branches in the tree, for example: \"(A:1,B:2,(C:3,D:4):5);\" - this should be saved to a \"tree_blosumXX_newick_with_distance.nw\", where XX represents version of blosum table that was used throught previous tasks. In this case, the distances shouldn't include any decimal point number, so remember to write them as a integers (e.g. 1200 instead of 1200.00).\n",
       "Expected Output: Modification of previously generated code to include additional requirement. Make sure to divide logic into necessary files and shortly explain what generated code does.\n",
       "\n",
       "Executing prompt Goal: Generating a code for drawing a dendrogram of created tree.\n",
@@ -166,9 +166,9 @@
       "Instruction: I need to set up all generated code in the repository. Generate an outline of what files I should have in the repository. For each file provide a final code that should be in this file and a short description of what this file contains.\n",
       "Expected Output: List of all files that should be included in the final code set up, with description of what given files contains and final version of code to put it this file.\n",
       "\n",
-      "Executing prompt Goal: Preparing a requiremtns and ReadMe files for better projet understanding.\n",
-      "Instruction: Provide a requirements.txt file with all the necessary libraries so I would be able to create an environment for this code? Also, add a README.md file with description of the project and instruction how to run it.  \n",
-      "Expected Output: Generated requiremtns.txt and ReadMe.md files that include libraries necessary to creat environment for the project; project description and steps to run. \n",
+      "Executing prompt Goal: Preparing a pom.xml and ReadMe files for better projet understanding.\n",
+      "Instruction: Provide a pom.xml file with all the necessary libraries so I would be able to create an environment for this code? Also, add a README.md file with description of the project and instruction how to run it.  \n",
+      "Expected Output: Generated pom.xml and ReadMe.md files that include libraries necessary to creat environment for the project; project description and steps to run. \n",
       "\n",
       "Executing prompt Goal: Rating previously send prompts to check if they contained all information necessary for good understanding.\n",
       "Instruction: Rate each of the previously send prompts in terms of clarity, completeness and unambiguity in the scale 1-5, where 1 is the lowest score and 5 the highest. \n",
@@ -186,7 +186,7 @@
    ],
    "source": [
     "prompts = read_prompts(\"./prompts_tests.yaml\", testing_version)\n",
-    "output_file_path = f\"./test_results/test_conversation_version_{testing_version}_v1.md\"\n",
+    "output_file_path = f\"./test_results/test_conversation_version_{testing_version}_v0.md\"\n",
     "print(\"Prompts loaded\")\n",
     "markdown_output = [f\"# Tests of prompts for Conversational Code Generation - version {testing_version}\\n\"]\n",
     "with open(output_file_path, \"w\", encoding=\"utf-8\") as f:\n",
