--- a/LLM_experiments/tests_on_gemini.ipynb
+++ b/LLM_experiments/tests_on_gemini.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gemini = ChatGoogleGenerativeAI(model=\"gemini-2.5-pro-preview-06-05\",temperature=0.2)\n",
+    "gemini = ChatGoogleGenerativeAI(model=\"gemini-2.5-pro\",temperature=0.2)\n",
     "testing_version = \"GoalInstructionOutputJava\""
    ]
   },
@@ -204,9 +204,6 @@
     "        f.write(\"\\n\".join(markdown_output))\n",
     "print(\"Prompt execution finished\")\n",
     "\n",
-    "\n",
-    "# with open(output_file_path, \"w\", encoding=\"utf-8\") as f:\n",
-    "#     f.write(\"\\n\".join(markdown_output))\n",
     "print(\"Result saved to file\")"
    ]
   }
